# pandaria_5.4.8

./: 2021_11_05_Intendentes-PVE.sql  CMakeLists.txt  README.md  revision.h.in.cmake
.github/ISSUE_TEMPLATE/: config.yml  issue.yml  sql_fix.yml
.github/workflows/: gcc-build.yml  linux_clang.yml  linux_gcc.yml  main.yml  pr-labeler.yml  windows-build.yml
cmake/compiler/clang/: settings.cmake
cmake/compiler/gcc/: settings.cmake
cmake/macros/: FindACE.cmake
contrib/: merge_updates_windows.bat
dep/: CMakeLists.txt
dep/acelite/ace/: CMakeLists.txt
dep/fmt/: CMakeLists.txt
dep/recastnavigation/: CMakeLists.txt
dep/zlib/: CMakeLists.txt
sql/: 2023_11_16_world_03.sql
sql/ApplySQLFiles/: ApplySQLFiles.bat
sql/base/: archive.sql  auth.sql  characters.sql
sql/updates/master/archive/: 2023_01_20_archive_currency_transactions.sql
sql/updates/master/auth/: 2023_11_10_auth.sql  2023_11_26_auth.sql  2023_11_27_auth.sql  (+2 more)
sql/updates/world/: [0014]_world_creature_sparring.sql  [0042]_world_new_tinkertown.sql  [0043]_world_camp_narache.sql
src/: CMakeLists.txt
src/LuaEngine/: AuraMethods.h  CMakeLists.txt  ItemMethods.h  UnitMethods.h
src/common/: Banner.cpp  Banner.h  CMakeLists.txt  Common.cpp  Common.h  CompilerDefs.h  Define.h  GitRevision.cpp  GitRevision.h
src/common/Asio/: AsioHacksFwd.h  DeadlineTimer.h  IoContext.h  IpAddress.h  IpNetwork.h  Resolver.h  Strand.h
src/common/Configuration/: BuiltInConfig.cpp  BuiltInConfig.h  Config.cpp  Config.h
src/common/Cryptography/: ARC4.cpp  ARC4.h  BigNumber.cpp  BigNumber.h  CryptoConstants.h  CryptoHash.h  CryptoRandom.cpp  CryptoRandom.h  HMAC.h  HMACSHA1.cpp  MD5Util.h  OpenSSLCrypto.cpp  OpenSSLCrypto.h  SHA1.cpp  SHA1.h
src/common/Cryptography/Authentication/: AuthCrypt.cpp  AuthCrypt.h  AuthDefines.h  SRP6.cpp  SRP6.h
src/common/Debugging/: Errors.cpp  Errors.h
src/common/Hacks/: boost_1_73_process_windows_nopch.h  boost_1_74_fibonacci_heap.h
src/common/IPLocation/: IPLocation.cpp  IPLocation.h
src/common/Logging/: Appender.cpp  Appender.h  AppenderConsole.cpp  AppenderConsole.h  AppenderFile.cpp  AppenderFile.h  Log.cpp  Log.h  LogCommon.h  LogMessage.cpp  LogMessage.h  LogOperation.cpp  LogOperation.h  Logger.cpp  Logger.h  enuminfo_AppenderConsole.cpp  enuminfo_LogCommon.cpp
src/common/PrecompiledHeaders/: commonPCH.h
src/common/Threading/: LockedQueue.h  MPSCQueue.h  ProcessPriority.cpp  ProcessPriority.h  ProducerConsumerQueue.h  ThreadPool.h
src/common/Utilities/: AsyncCallbackProcessor.h  Duration.h  EnumFlag.h  EventProcessor.h  Hash.h  IteratorPair.h  MessageBuffer.h  Optional.h  Random.cpp  Random.h  SFMTRand.cpp  SFMTRand.h  SignalHandler.h  SmartEnum.h  StartProcess.cpp  StartProcess.h  StringConvert.h  TaskScheduler.h  Timer.h  Tuples.h  Types.h  Util.cpp  Util.h  advstd.h
src/server/: CMakeLists.txt
src/server/authserver/: CMakeLists.txt  Main.cpp  authserver.conf.dist
src/server/collision/: CMakeLists.txt  VMapDefinitions.h
src/server/database/: CMakeLists.txt
src/server/database/Database/: AdhocStatement.cpp  AdhocStatement.h  DatabaseEnv.cpp  DatabaseEnv.h  DatabaseEnvFwd.h  DatabaseLoader.cpp  DatabaseLoader.h  DatabaseWorker.cpp  DatabaseWorker.h  DatabaseWorkerPool.cpp  DatabaseWorkerPool.h  Field.cpp  Field.h  MySQLConnection.cpp  MySQLConnection.h  MySQLHacks.h  MySQLPreparedStatement.cpp  MySQLPreparedStatement.h  MySQLThreading.cpp  MySQLThreading.h  MySQLWorkaround.h  PreparedStatement.cpp  PreparedStatement.h  QueryCallback.cpp  QueryCallback.h  QueryHolder.cpp  QueryHolder.h  QueryResult.cpp  QueryResult.h  SQLOperation.h  Transaction.cpp  Transaction.h
src/server/database/Database/Implementation/: ArchiveDatabase.cpp  ArchiveDatabase.h  CharacterDatabase.cpp  CharacterDatabase.h  LoginDatabase.cpp  LoginDatabase.h  WorldDatabase.cpp  WorldDatabase.h
src/server/database/Logging/: AppenderDB.cpp  AppenderDB.h
src/server/database/PrecompiledHeaders/: databasePCH.h
src/server/database/Updater/: DBUpdater.cpp  DBUpdater.h  UpdateFetcher.cpp  UpdateFetcher.h
src/server/game/: CMakeLists.txt
src/server/newscripts/: CMakeLists.txt
src/server/scripts/: CMakeLists.txt
src/server/shared/: CMakeLists.txt  Common.h  Containers.h  Define.h
src/server/shared/Configuration/: Config.cpp  Config.h
src/server/shared/Cryptography/: BigNumber.cpp  HMACSHA1.cpp  MD5Util.cpp  OpenSSLCrypto.cpp  OpenSSLCrypto.h  SHA1.cpp
src/server/shared/DataStores/: DBCFileLoader.cpp  DBCStore.h  DBCStructure.h
src/server/shared/Database/: AppenderDB.cpp  DatabaseWorker.cpp  DatabaseWorker.h  DatabaseWorkerPool.cpp  DatabaseWorkerPool.h  Field.cpp  Field.h  MySQLConnection.cpp  MySQLConnection.h  MySQLThreading.h  PreparedStatement.cpp  QueryResult.h  SQLOperation.h  Transaction.cpp  Transaction.h
src/server/shared/Database/Implementation/: FusionCMSDatabase.h  LoginDatabase.cpp  LoginDatabase.h  WorldDatabase.cpp
src/server/shared/Debugging/: Errors.cpp  Errors.h
src/server/shared/Dynamic/: FactoryHolder.h  ObjectRegistry.h
src/server/shared/Logging/: Appender.cpp  Appender.h  AppenderDB.cpp  AppenderFile.cpp  AppenderFile.h  Log.cpp  Log.h
src/server/shared/Networking/: AsyncAcceptor.h  NetworkThread.h  Socket.h  SocketMgr.h
src/server/shared/Packets/: ByteBuffer.cpp  ByteBuffer.h  ObjectGuid.h
src/server/shared/PrecompiledHeaders/: sharedPCH.h
src/server/shared/Realms/: Realm.h  RealmList.cpp  RealmList.h
src/server/shared/Threading/: Callback.h  DelayExecutor.cpp  TaskMgr.cpp  TaskMgr.h  Threading.cpp  Threading.h
src/server/shared/Utilities/: Optional.h  SFMTRand.cpp  StringFormat.h  Timer.h  Util.cpp  Util.h  UtilACE.cpp  UtilACE.h
src/server/worldserver/: CMakeLists.txt  Main.cpp  Master.cpp  Master.h  worldserver.conf.dist
src/tools/map_extractor/: CMakeLists.txt  System.cpp
src/tools/mmaps_generator/: CMakeLists.txt  MapBuilder.cpp  PathCommon.h  PathGenerator.cpp  TerrainBuilder.cpp
src/tools/vmap4_assembler/: CMakeLists.txt  VMapAssembler.cpp
src/tools/vmap4_extractor/: CMakeLists.txt
src/updater/: updater.conf.dist
(+506 files in other folders)
